--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 app=dev
-db_user=root
-db_password=miles
-db_host=127.0.0.1
+db_user=OGalindo
+db_password=LA718264*rd
+db_host=172.31.252.135
 jwt_encryption=aiwushfaeiuvnaeifunva02
 jwt_expiration=1000
